<resources>
    <string name="app_name">Kravito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_phone_number_hint">Enter Phone Number <font color='#f9154a'>*</font></string>
    <string name="country_code">+91</string>
    <string name="login_head">Log in or Sign up</string>
    <string name="continue_text">Continue</string>
    <string name="terms_checkbox_text">I agree to the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="and_text">and</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_description">We have sent a verification code to</string>
    <string name="otp_phone_number">+91 %1$s</string>
    <string name="kravito_info_text">Kravito is here to serve your cravings and to give customer best service possible</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_time_count_text">Resend OTP in %1$d s</string>
    <string name="sample_address">JNNRUM Colony, Boyapalem, Visakhapatnam, Andhra Pradhesh, India, 531163</string>
    <string name="notifications">Notifications</string>
    <string name="favourites">Favourites</string>
    <string name="past_orders">Past Orders</string>
    <string name="track_order">Track Order</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_account">My Account</string>
    <string name="your_orders">Your Orders</string>
    <string name="favourite_orders">Favourite Orders</string>
    <string name="address_book">Address Book</string>
    <string name="your_name">Your Name</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="your_dob">Your DOB</string>
    <string name="your_email">Your Email</string>
    <string name="offers">Offers</string>
    <string name="your_account">Your Account</string>
    <string name="about_us">About Us</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="return_cancellation_policy">Return &amp; Cancellation Policy</string>
    <string name="rate_us_text">Rate us on Play Store</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="email_us">Email Us</string>
    <string name="app_version">App Version</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_message">Are you sure you want to Log Out…?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_version_num_sample">v1.0.1</string>
    <string name="call_us">Call Us</string>
    <string name="enter_your_name_hint">Your Name <font color='#f9154a'>*</font></string>
    <string name="enter_your_mail_hint">Your Mail <font color='#f9154a'>*</font></string>
    <string name="update">Update</string>
    <string name="set_dob">Date of Birth -></string>
    <string name="date_format">DD/MM/YYY</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile">Profile</string>
    <string name="loading_location">Loading Location…</string>
    <string name="go_to_network_settings">Go to Network Settings</string>
    <string name="no_internet">No Internet</string>
    <string name="search_hint">Your Favourite Dish or Restaurant</string>
    <string name="top_offers">Top Offers</string>
    <string name="what_s_on_your_mind">What\'s on your mind…?</string>
    <string name="restaurants_near_you">Restaurants Near You…</string>
    <string name="delicious_food">Delicious Food</string>
    <string name="menu">Menu</string>
    <string name="search_for_dishes">Search for dishes…</string>
    <string name="currency_symbol">₹ </string>
    <string name="add">Add</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="added">Added</string>
    <string name="view_cart">View Cart</string>
    <string name="multiply_symbol">x</string>
    <string name="place_order">Place Order</string>
    <string name="no_items_in_the_cart">No items in the cart</string>
    <string name="replace_cart_item">Replace Cart Item…?</string>
    <string name="replace_cart_message">Your cart contains dishes from <![CDATA[<b>%1$s</b>]]>. Do you want to discard the selection and add dishes from <![CDATA[<b>%2$s</b>]]>…?</string>
    <string name="cart_details">Cart Details</string>
    <string name="bill_details">Bill Details</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery Partner Fee</string>
    <string name="gst">GST</string>
    <string name="grand_total">Grand Total</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non Veg</string>
    <string name="delivery_tip_text">Tip your delivery partner</string>
    <string name="delivery_tip_text2">Delivery Tip</string>
    <string name="delivery_tip_desc">Thank your delivery partner by leaving them a tip. 100% of the tip will go to your delivery partner.</string>
    <string name="delivery_instructions">Delivery Instructions</string>
    <string name="view_detailed_bill">View Detailed Bill</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="avoid_ringing_bell">Avoid ringing bell</string>
    <string name="leave_at_the_door">Leave at the Door</string>
    <string name="directions_to_reach">Directions to reach</string>
    <string name="avoid_calling">Avoid calling</string>
    <string name="leave_with_security">Leave with security</string>
    <string name="items_added">Items Added : </string>
    <string name="special_delivery_instructions">Special Delivery Instructions</string>
    <string name="surprise_to_my_child">Surprise to my child</string>
    <string name="surprise_to_my_wife">Surprise to my wife</string>
    <string name="surprise_to_my_brother">Surprise to my brother</string>
    <string name="surprise_to_my_parents">Surprise to my parents</string>
    <string name="surprise_to_my_loved_one">Surprise to my loved one</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_total">Order Total : </string>
    <string name="order_from">Order From</string>
    <string name="order_to">Order To</string>
    <string name="payment_options">Payment Options</string>
    <string name="cash_on_delivery_cod">Cash on Delivery (COD)</string>
    <string name="phonepe">PhonePe</string>
</resources>