<?xml version="1.0" encoding="utf-8"?>
<layout>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/replace_cart_item"
            android:textSize="16sp"
            android:textColor="@color/pink"
            android:fontFamily="@font/text_font_bold"/>

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dialog_title"
            app:layout_constraintStart_toStartOf="@id/dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            tools:text="@string/replace_cart_message"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/text_font_regular"/>

        <TextView
            android:id="@+id/no_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dialog_message"
            app:layout_constraintBottom_toBottomOf="@id/yes_tv"
            app:layout_constraintEnd_toStartOf="@id/yes_tv"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:text="@string/no"
            android:textSize="14sp"
            android:textColor="@color/green"
            android:fontFamily="@font/text_font_regular"/>

        <TextView
            android:id="@+id/yes_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="30dp"
            android:text="@string/yes"
            android:textSize="14sp"
            android:textColor="@color/pink"
            android:fontFamily="@font/text_font_regular"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

</layout>