<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/pink"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/gothamrounded_bold"
                    app:layout_constraintTop_toTopOf="@id/app_icon"
                    app:layout_constraintBottom_toBottomOf="@id/app_icon"
                    app:layout_constraintStart_toEndOf="@id/app_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:layout_marginTop="-5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/pink"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:flipInterval="7000"
        android:autoStart="true"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/cooking_animation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/delivery_animation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_rawRes="@raw/door_delivery"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

    </ViewFlipper>
    
    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view_flipper"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:weightSum="3">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_weight="1"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_head"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/text_font_bold"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_weight="1"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_number_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_ll"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        app:boxStrokeColor="@color/pink"
        app:boxStrokeWidth="1dp"
        android:hint="@string/enter_phone_number_hint"
        app:hintTextColor="@color/black"
        app:prefixText="@string/country_code"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:digits="0123456789"
            android:textColor="@color/black"
            android:fontFamily="@font/text_font_bold"
            android:maxLength="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/terms_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mobile_number_til"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/terms_checkbox_text"
        android:fontFamily="@font/text_font_regular"
        app:buttonTint="@color/pink"/>

    <TextView
        android:id="@+id/terms_and_conditions_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/pink"
        android:fontFamily="@font/text_font_bold"
        app:layout_constraintBottom_toBottomOf="@id/terms_checkbox"
        app:layout_constraintStart_toEndOf="@id/terms_checkbox"
        app:layout_constraintTop_toTopOf="@id/terms_checkbox"
        android:layout_marginStart="2dp"/>

    <TextView
        android:id="@+id/and_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and_text"
        android:fontFamily="@font/text_font_regular"
        app:layout_constraintBottom_toBottomOf="@id/terms_checkbox"
        app:layout_constraintStart_toEndOf="@id/terms_and_conditions_tv"
        app:layout_constraintTop_toTopOf="@id/terms_checkbox"
        android:layout_marginStart="2dp"/>

    <TextView
        android:id="@+id/privacy_policy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_text"
        android:textColor="@color/pink"
        android:fontFamily="@font/text_font_bold"
        app:layout_constraintStart_toStartOf="@id/terms_checkbox"
        app:layout_constraintTop_toBottomOf="@id/terms_checkbox"
        android:layout_marginTop="-5dp"
        android:layout_marginStart="31dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/privacy_policy_tv"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/pink"
        android:text="@string/continue_text"
        android:textColor="@color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>