<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <ImageView
        android:id="@+id/v_nv_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        tools:src="@drawable/non_veg_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/v_nv_icon"
        app:layout_constraintStart_toStartOf="@id/v_nv_icon"
        android:layout_marginTop="10dp"
        tools:text="Veg Manchurian"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/text_font_bold"/>

    <TextView
        android:id="@+id/currency_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_name"
        app:layout_constraintStart_toStartOf="@id/v_nv_icon"
        android:layout_marginTop="10dp"
        android:text="@string/currency_symbol"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_name"
        app:layout_constraintStart_toEndOf="@id/currency_symbol"
        android:layout_marginTop="8dp"
        android:layout_marginStart="1dp"
        tools:text="220"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/text_font_regular"/>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/item_name"
        app:layout_constraintBottom_toBottomOf="@id/item_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:text="@string/add"
        android:fontFamily="@font/text_font_bold"
        tools:visibility="visible"
        app:elevation="5dp"
        android:scaleX="0.8"
        android:scaleY="0.8"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/added_item_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/item_name"
        app:layout_constraintBottom_toBottomOf="@id/item_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:textColor="@color/green"
        android:text="@string/added"
        android:fontFamily="@font/text_font_bold"
        app:strokeWidth="0.5dp"
        app:elevation="5dp"
        android:visibility="gone"
        android:scaleX="0.8"
        android:scaleY="0.8"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey2"
        app:layout_constraintTop_toBottomOf="@id/item_price"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>